Repair bug on iphones >:(

--- a/styles/index.sass
+++ b/styles/index.sass
@@ -64,7 +64,6 @@ section
 
     height: 80px
     width: 100%
-    transition: 0.6s
 
     color: rgb(215, 215, 215)
     cursor: default
@@ -302,13 +301,16 @@ section
         transition-timing-function: cubic-bezier(0, 1, 0.5, 1)
 
 
-    .menu.closed 
+    .closed 
+        visibility: hidden
         position: fixed
   
         max-height: 0px    
         height: 0px
+
+        transition: 0s 
         
-        content-visibility: hidden
+        
 
 
     #thirdPageInfo 
