--- a/styles/myWork.sass
+++ b/styles/myWork.sass
@@ -61,7 +61,6 @@ section
 
     height: 80px
     width: 100%
-    transition: 0.6s
 
     color: rgb(215, 215, 215)
     background-color: #00000097
@@ -92,8 +91,6 @@ section
     align-items: center
 
     gap: 50px
-
-    transition: 0.6s
 
 #menu a 
     font-size: 22px
@@ -211,16 +208,17 @@ section
         padding-bottom: 40px
 
         transition-property: all
-        transition-duration: 1s
+        transition-duration: 0.2s
         transition-timing-function: cubic-bezier(0, 1, 0.5, 1)
     
-    .menu.closed 
+    .closed 
+        visibility: hidden
         position: fixed
-    
+  
         max-height: 0px    
         height: 0px
-            
-        content-visibility: hidden
+
+        transition: 0s
     
 
 @media (max-width: 550px) 
