--- a/styles/workShow.sass
+++ b/styles/workShow.sass
@@ -62,8 +62,6 @@ section
     height: 80px
     width: 100%
 
-    transition: 0.6s
-
     color: rgb(215, 215, 215)
     background-color: #00000097
 
@@ -95,7 +93,6 @@ section
     align-items: center
 
     gap: 50px
-    transition: 0.6s
 
     a
         font-size: 22px
@@ -285,13 +282,14 @@ section
         transition-duration: 1s
         transition-timing-function: cubic-bezier(0, 1, 0.5, 1)
 
-    .menu.closed 
+    .closed 
+        visibility: hidden
         position: fixed
   
-        max-height: 0px  
+        max-height: 0px    
         height: 0px
-        
-        content-visibility: hidden
+
+        transition: 0s
 
     .card
         min-height: 300px
